--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    hello israel and all world
+    hello israel <b>and all world</b> 
 </body>
 </html>
